# lolmetadumper3

./: .gitignore  Cargo.toml  README.md  build.rs
.cargo/: config
src/: main.rs  meta.rs  meta_dump.rs
src/loader/: macho.rs  mod.rs  newer.rs  stubs.rs
stubs/: CMakeLists.txt
stubs/src/: common.h  hack.c  stub.c  stub_asl.c  stub_audio.c  stub_dispatch.c  stub_fs.c  stub_io.c  stub_kernel.c  stub_kernel_kqueue.c  stub_math.c  stub_misc.c  stub_nvcg.c  stub_objc.c  stub_process.c  stub_pthread.c  stub_resolv.c  stub_rune.c  stub_socket.c  stub_str.c  stub_sys.c  stub_xpc.c
