[package]
name = "lolmetadumper3"
version = "0.3.0"
authors = ["moonshadow565 <moonshadow565@hotmail.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
anyhow = "1.0.80"
goblin = { version = "0.8", default-features = false, features = ["std", "mach64"] }
libc = "0.2.153"
lazy_static = "1.4.0"
mmap = "0.1.1"
regex = "1.10.3"
scroll = "0.12.0"
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.114"
